--- a/results/1.0.7/index.html
+++ b/results/1.0.7/index.html
@@ -2,16 +2,8 @@
   <head>
     <title>logstash benchmark</title>
     <link type="text/css" rel="stylesheet" href="ex.css?3.2"/>
-    <script type="text/javascript" src="protovis-3.2/protovis-r3.2.js"></script>
+    <script type="text/javascript" src="/js/protovis-3.2/protovis-r3.2.js"></script>
     <script type="text/javascript" src="output.js"></script>
-    <style type="text/css">
-
-#fig {
-  //width: 800px;
-  //height: 225px;
-}
-
-    </style>
   </head>
   <body>
 
